--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "sass": "^1.52.1"
+  }
 }
