--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.45",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.10.1",
-    "tslib": "^2.3.1",
-    "typescript": "~4.6.2"
+    "@sveltejs/kit": "^1.1.0",
+    "@sveltejs/vite-plugin-svelte": "^1.4.0",
+    "svelte": "^3.55.1",
+    "svelte-check": "^2.10.3",
+    "svelte-preprocess": "^4.10.7",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4"
   },
   "type": "module",
   "dependencies": {
-    "sass": "^1.52.1",
-    "vite": "^3.0.0"
+    "@sveltejs/adapter-netlify": "^1.0.0-next.84",
+    "sass": "^1.57.1",
+    "vite": "^4.0.4"
   }
 }
